--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -146,6 +146,7 @@ rush.json       @iTwin/itwinjs-core-admins
 /test-apps/display-performance-test-app     @iTwin/itwinjs-core-display @hnn0003
 /test-apps/display-test-app                 @bbastings @kabentley @iTwin/itwinjs-core-display
 /test-apps/display-test-app/ios             @iTwin/mobilesdkadmins
+/test-apps/display-test-app/android         @iTwin/mobilesdkadmins
 /test-apps/export-gltf                      @MichaelBelousov @iTwin/itwinjs-core-display
 /test-apps/export-obj                       @MichaelBelousov @iTwin/itwinjs-core-display
 /test-apps/imjs-importer                    @bbastings @dassaf4 @saeeedtorabi
