--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -40,9 +40,9 @@ steps:
     workingDirectory: ${{ parameters.workingDir }}
     displayName: Copy Reference files to Staging
 
-  - script: dir /S
-    workingDirectory: ${{ parameters.stagingDir }}
-    displayName: Log files
+  # - script: dir /S
+  #   workingDirectory: ${{ parameters.stagingDir }}
+  #   displayName: Log files
 
   # BIS Docs are pulled from a separate internal build
   - task: DownloadBuildArtifacts@0
