DTA Android now uses Kotlin (#4584)
* Updated gradle build files to use mobile-native-android

* Created a single mobile_backend.config.js that is used by iOS and Android.

* Redirect backend logs to frontend.
Allow for devserver URL

* Added android app to clean

* Updated Android README for local native debugging.

* Latest addon

* Created shouldInterceptRequest override to properly load dependent javascript files.

* Fixed Android to work with built-in frontend and no extra intercept code.

* Removed logging redirection as I don't know if it's working.

* Use inline source maps for moible backend so we can at least debug individual js files.

* Removed commented out code

* Changed MainActivity to kotlin

* First implementation of Briefcase button

* Upgrade to 3.5.6

* Edited comment

* Use a base theme without an action bar

* Added AssetsPathHandler implementation

* Commented out onPause and onResume

* Added copyright header

* Removed unused code.

* Renamed Messenger class to MobileMessenger

* Updated android readme regarding opening an iModel.

* Redid getFileDisplayName and copyToExternalFiles

* Fixed MobileMessenger.getHandler for iOS

Co-authored-by: Paul Connelly <22944042+pmconne@users.noreply.github.com>

--- a/test-apps/display-test-app/android/imodeljs-test-app/app/build.gradle
+++ b/test-apps/display-test-app/android/imodeljs-test-app/app/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.bentley.imodeljs_test_app"
@@ -26,15 +27,20 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-ui:2.5.2'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'com.github.itwin:mobile-native-android:3.5.6'
+    implementation 'androidx.webkit:webkit:1.5.0'
 }
