--- a/common/config/azure-pipelines/jobs/docs/update-docs-index.yaml
+++ b/common/config/azure-pipelines/jobs/docs/update-docs-index.yaml
@@ -24,10 +24,9 @@ jobs:
       secretTokens: AlgoliaApiKey:$(AlgoliaApiKey)
 
   - task: NodeTool@0
-    displayName: Use Node 16
+    displayName: Use node 12.15.x
     inputs:
-      versionSpec: 16.13.0
-      checkLatest: true
+      versionSpec: 12.15.x
 
   - task: Npm@1
     displayName: npm install
