--- a/core/ecschema-editing/package.json
+++ b/core/ecschema-editing/package.json
@@ -49,7 +49,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "16.11.59",
     "@types/sinon": "^9.0.0",
-    "@xmldom/xmldom": "^0.7.6",
+    "@xmldom/xmldom": "~0.8.3",
     "benchmark": "^2.1.4",
     "chai": "^4.1.2",
     "chai-as-promised": "^7",
