--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -65,18 +65,19 @@ steps:
     displayName: rush audit
     workingDirectory: ${{ parameters.workingDir }}
     condition: and(succeeded(), ne(variables['Agent.OS'], 'Darwin'))
-  - script: node common/scripts/install-run-rush.js build:ci -v -p max
-    displayName: rush build:ci
-    workingDirectory: ${{ parameters.workingDir }}
-    condition: and(succeeded(), not(and(eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Agent.OS'], 'Darwin'))))
-    env:
-      RUSH_BUILD_CACHE_CREDENTIAL: $(RushBuildCacheSAS)
-      RUSH_BUILD_CACHE_ENABLED: ${{parameters.rushBuildCacheEnabled}}
+  # - script: node common/scripts/install-run-rush.js build:ci -v -p max
+  #   displayName: rush build:ci
+  #   workingDirectory: ${{ parameters.workingDir }}
+  #   condition: and(succeeded(), not(and(eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Agent.OS'], 'Darwin'))))
+  #   env:
+  #     RUSH_BUILD_CACHE_CREDENTIAL: $(RushBuildCacheSAS)
+  #     RUSH_BUILD_CACHE_ENABLED: ${{parameters.rushBuildCacheEnabled}}
 
   - script: node common/scripts/install-run-rush.js build -v -p max
     displayName: rush build
     workingDirectory: ${{ parameters.workingDir }}
-    condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Agent.OS'], 'Darwin'))
+    # condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Agent.OS'], 'Darwin'))
+    condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
   - script: npm run ios:all
     workingDirectory: "test-apps/display-test-app"
     displayName: "Build & run iOS display-test-app"
