--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -77,7 +77,7 @@ steps:
     displayName: rush build
     workingDirectory: ${{ parameters.workingDir }}
     # condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Agent.OS'], 'Darwin'))
-    condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
+    # condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
   - script: npm run ios:all
     workingDirectory: "test-apps/display-test-app"
     displayName: "Build & run iOS display-test-app"
