--- a/common/config/azure-pipelines/ci-ios.yaml
+++ b/common/config/azure-pipelines/ci-ios.yaml
@@ -45,9 +45,9 @@ jobs:
         clean: true
 
       - task: NodeTool@0
-        displayName: "Use Node 14.17.4"
+        displayName: "Use Node 18"
         inputs:
-          versionSpec: 14.17.4
+          versionSpec: 18.x
           checkLatest: true
 
       - script: |
