--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -35,9 +35,9 @@ jobs:
         clean: true
 
       - task: NodeTool@0
-        displayName: Use Node 14
+        displayName: Use Node 18
         inputs:
-          versionSpec: 14.17.4
+          versionSpec: 18.x
           checkLatest: true
 
       - script: |
