--- a/core/frontend/package.json
+++ b/core/frontend/package.json
@@ -46,8 +46,7 @@
     "@itwin/core-common": "workspace:^4.0.0-dev.3",
     "@itwin/core-geometry": "workspace:^4.0.0-dev.3",
     "@itwin/core-orbitgt": "workspace:^4.0.0-dev.3",
-    "@itwin/core-quantity": "workspace:^4.0.0-dev.3",
-    "@itwin/webgl-compatibility": "workspace:^4.0.0-dev.3"
+    "@itwin/core-quantity": "workspace:^4.0.0-dev.3"
   },
   "//devDependencies": [
     "NOTE: All peerDependencies should also be listed as devDependencies since peerDependencies are not considered by npm install",
@@ -99,6 +98,7 @@
     "@itwin/object-storage-core": "~1.4.0",
     "@itwin/core-i18n": "workspace:*",
     "@itwin/core-telemetry": "workspace:*",
+    "@itwin/webgl-compatibility": "workspace:*",
     "@loaders.gl/core": "^3.1.6",
     "@loaders.gl/draco": "^3.1.6",
     "deep-assign": "^2.0.0",
